#############################################################################
#  Copyright (C) 2004 Leonid Zolotarev
#
#  Licensed under the terms of the BSD license, see file COPYING
#  for details.
#
#  GTK ACX Tool.
#
#  icons/Makefile.am
#
#  Process this file with automake to produce Makefile.in
#
#  $Id: Makefile.am,v 1.1.1.1 2005-07-23 23:16:12 zoleo Exp $
#############################################################################

iconsdir = $(DESTDIR)$(pkgdatadir)/icons

icons_DATA = \
	gacxtool.png

EXTRA_DIST = $(icons_DATA)

clean:
	rm -f \
	*~ \
	*.bak \
	Makefile.in

#############################################################################
